--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --collectCoverage"
+    "test": "jest --runInBand --detectOpenHandles --collectCoverage"
   },
   "author": "",
   "license": "ISC",
