--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "devDependencies": {
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.2",
     "nodemon": "^2.0.21",
-    "supertest": "^6.3.3",
-    "mongodb-memory-server": "^8.12.2"
+    "prettier": "2.8.7",
+    "supertest": "^6.3.3"
   }
 }
