--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "socket.io": "^4.6.1",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
