--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "log": "^6.3.1",
     "socket.io": "^4.6.1",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1"
   },
