--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js --trache-warnings",
     "test": "jest --runInBand --detectOpenHandles --collectCoverage"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@casl/ability": "^6.4.0",
+    "@socket.io/admin-ui": "^0.5.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "log": "^6.3.1",
+    "socket.io": "^4.6.1",
+    "socketio": "^1.0.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1"
   },
